wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_multiple_defer_attributes.stderr
error: expected a single `#[defer]` attribute to identify the field to defer into, found 2
 --> tests/derive_error_category/fail_on_multiple_defer_attributes.rs:6:5
  |
6 |     SingleStruct {
  |     ^^^^^^^^^^^^
