wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_multiple_defer_attributes.rs
use wallet_common::error_category::ErrorCategory;

#[derive(ErrorCategory)]
#[allow(dead_code)]
enum ChildError {
    #[category(expected)]
    Unit,
}

#[derive(ErrorCategory)]
#[allow(dead_code)]
enum RootError {
    #[category(defer)]
    SingleStruct {
        #[defer]
        field_1: ChildError,
        #[defer]
        field_2: ChildError,
    }
}

fn main() {}
